--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -14,6 +14,7 @@
             <a href="{{ url_for('index') }}" class="back-btn">Volver</a>
         </div>
 
+        <!-- Agregar una nueva tarea -->
         <form action="{{ url_for('add_task') }}" method="post" class="task-form">
             <div class="form-group">
                 <label for="title">Título:</label>
@@ -26,6 +27,7 @@
             </div>
 
             <div class="form-group">
+                <!--Seleccionar la categoría de la tarea -->
                 <label for="category">Categoría:</label>
                 <select name="category" id="category" required>
                     <option value="Pendiente">Pendiente</option>
@@ -34,6 +36,7 @@
                 </select>
             </div>
 
+            <!-- Boton para enviar el formulario y agregar la tarea -->
             <button type="submit" class="submit-btn">Agregar Tarea</button>
         </form>
     </div>
